--- a/class1.html
+++ b/class1.html
@@ -1,8 +1,15 @@
-teste
+<!DOCTYPE html>
 
-teste <table>
-
-    teste
-
+<html>
+    <head> 
+        <meta charset="utf-8"/>
+        <title>
+            HTML5 RBtech
+        </title>
+    </head>
     
-</table>
+    <body>
+        <h1>Minha primeira pagina HTML 5</h1>
+        <p>Este e o <em>primeiro</em> paragrafo da minha pagina HTML. <br/>Esta e a segunda <strong>linha</strong> do paragrafo.</p>
+    </body>
+</html>
