--- a/seo_tag.html
+++ b/seo_tag.html
@@ -2,10 +2,11 @@
 
 <html>
     <head> 
-        <meta charset="utf-8"/>
-        <title>
-            HTML5 RBtech
-        </title>
+        <title>HTML5 RBtech - Aulas HTML 5</title>
+        <meta charset="utf-8" />
+        <meta name="description" content="Descricao completado conteudo limitado a 156 caracteres" />
+        <meta name="Keywords" content="hmtl, titulos, cabecalhos, seo, meta, tags" />
+        <meta name="author" content="Vinicius Miranda de Pinho" />
     </head>
     
     <body>
