--- a/estrutura_html5.html
+++ b/estrutura_html5.html
@@ -22,7 +22,9 @@
             <footer>Rodape desta secao</footer>
         </section>
         <article>
-            Post ou conteudo da pagina
+            <header><h1>Titulos da artigo</h1></header>
+            <p>Conteudo do artigo</p>
+            <footer>Rodape do artigo</footer>
         </article>
         <aside>
             Barra lateral (sidebar)
