--- a/estrutura_html5.html
+++ b/estrutura_html5.html
@@ -33,6 +33,7 @@
             Rodape do site
         </footer>
         <!--Apenas um h1 por pagina web por nivel de importancia do google-->
-               
+        <br/>
+        <a href="pagina_1.html">&#9756; &nbsp; Voltar</a>       
     </body>
 </html>
