--- a/link_img.html
+++ b/link_img.html
@@ -10,14 +10,13 @@
     </head>
     
     <body>
-        <h1>Titulo de nivel pagina 1</h1>
         <!--Apenas um h1 por pagina web por nivel de importancia do google-->
-        <h2>Titulo de nivel pagina 1</h2>
-        <h3>Titulo de nivel pagina 1</h3>
-        <h4>Titulo de nivel pagina 1</h4>
-        <h5>Titulo de nivel pagina 1</h5>
-        <h6>Titulo de nivel pagina 1</h6>
-
-        
+        <blockquote>
+            <p>"A imaginacao vale mais do que o conhecimento"</p>
+        </blockquote>
+        <a href="C:\Users\motov\Documents\Q_A_quality\html_5_\rbtech\RBtech_class\listas.html" target="blank"> Open the page lists</a>
+        <!--por padrao o o target sempre vem em _self o que abre na mesma pagina, o blank permite nova aba-->
+        <!--a significa ancor-->
     </body>
 </html>
+
