--- a/listas.html
+++ b/listas.html
@@ -36,5 +36,7 @@
             <dt>HTML</dt>
             <dd>Linguagem de marcacao de para paginas web</dd>
         </dl>
+        <br/>
+        <a href="pagina_1.html">&#9756; &nbsp; Voltar</a>
     </body>
 </htmlm>
