--- a/pagina_1.html
+++ b/pagina_1.html
@@ -11,7 +11,7 @@
     
     <body>
         <p><a href="listas.html" title="Acesse Page 1">Pagina1</a> &nbsp; | &nbsp;  <a href="estrutura_html5.html" title="Acesse Page 2">Pagina 2</a></p> | <a href="https://www.google.com.br/webhp?source=search_app" target="blank" title="Acesse Google Search">Google Page</a><p>
-           <img src="images/html_logo.png" alt="Icone HTML"/> 
+           <img src="images/html_logo.png" alt="Icone HTML" title="HTML 5 master"/> 
         </p>
         <!--espaco entre as duas paginas que link em html-->
         <!--alt  mandatorio usar para quando a imagem ainda nao abriu e para buscadores google -->
