--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
         <meta name="Keywords" content="hmtl, titulos, cabecalhos, seo, meta, tags" />
         <meta name="author" content="Vinicius Miranda de Pinho" />
         <!--chamada do estilo CCS-->
-        <link rel="stylesheet" type="text/css" href="estilos.css">
+        <link rel="stylesheet" type="text/css" href="estilo_css_formulario.css">
     </head>
     
     <body>
@@ -19,14 +19,15 @@
         <form action="" method="GET">
             <label for="nome" title="Digite seu nome e sobrenome">Nome:</label>
              <!-- nome e o valor que vem da pagina-->
-            <input id="nome" type="text" placeholder="Digite seu Nome:" name="nome"  />
+            <input id="nome" type="text" placeholder="Digite seu nome:" name="nome"  />
             <label for="opcao" title="Por favor, pode opinar sobre o site? ">Voce gostou do site:</label>
             <input id="opcao" type="radio" name="opcao" value="sim" checked="checked"/>Sim
             <input id="opcao" type="radio" name="opcao" value="nao" />Nao
             <label for="Linguagem" title="Temos mais opcoes de cursos...">Voce quer saber sobre outros cursos?</label>
             <input id="Linguagem" type="checkbox" name="html" value="HTML" />HTML
             <input id="Linguagem" type="checkbox" name="css" value="CSS" />CSS
-            <input type="submit" value="Enviar" />
+            <textarea name="Mensagem" id="mensagem" cols="30" rows="10" placeholder="Digite aqui a sua mensagem desejada!" title="Digite aqui aqui para enviar sua mensagem!"></textarea>
+            <input type="submit" value="Enviar" title="Aperte aqui para enviar..." />
         </form>
         <!--Apenas um h1 por pagina web por nivel de importancia do google teste de git-->
     </body>
